# Matrix

./: .travis.yml  CMakeLists.txt  matrix.cpp  matrix.h  source.cpp
include/: matrix.h
source/: matrix.cpp
tests/: CMakeLists.txt  init.cpp
